completely fixed invisible animal div bug- return empty div

--- a/styles/main.css
+++ b/styles/main.css
@@ -67,6 +67,9 @@ body {
 	display:none;
 }
 
+#invisible {
+	display:none;
+}
 .caret{
 	margin-left: 1px;
 }
